fix waybar workspace gaps issue

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -29,7 +29,7 @@ window#waybar {
   min-width: 0; /* Fix weird spacing in materia (waybar #450) */
   box-shadow: inset 0 -3px transparent; /* Use box-shadow instead of border so the text isn't offset */
   padding: 6px 18px;
-  margin: 6px 3px;
+  /* margin: 6px 3px; */
   border-radius: 4px;
   background-color: @bg;
   color: @lightgrey;
